--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ form[name='filterForm']{
 .overlay{
     width: 100%;
     height: 100%;
-    background-color: gray;
+    background-color: rgba(29, 83, 134, 0.828);
     position: absolute;
     top: 0;
     left: 0;
